--- a/src/main/resources/templates/page/release.html
+++ b/src/main/resources/templates/page/release.html
@@ -5,9 +5,9 @@
 input[type="button"] + input[type="button"] { margin-right: 12px; }
 #bf-content-area .col { overflow-y: auto; height: 100%; }
 #bf-content-area .header-row > .col { padding-top: 10px; overflow-y: hidden; }
-.header-row { text-align: center; width: 100%; height: 72px; }
+.header-row { text-align: center; width: 100%; }
 .header-row table { width: 100%; }
-.header-row td { border: 1px solid #ddd; border-collapse: collapse; }
+.list-table th, .list-table td { border: 1px solid #ddd; border-collapse: collapse; font-size: 12px; }
 .list-row { width: 100%; height: calc(100% - 150px); }
 .list-row .col { height: 100%; overflow-y: auto; padding-right: 0; }
 ul.list-wrapper { padding: 0; }
@@ -27,14 +27,16 @@ input[type="button"] + input[type="button"] { margin-right: 0; }
 	</div>
 	<div class="col col-sm-6 btn-wrapper">
 		<input type="button" value="전체파일" class="btn btn-outline-primary" id="btn-download-all">
-		<input type="button" value="변경된파일" class="btn btn-outline-primary" onclick="alert('현재 버전에서는 지원하지 않습니다');">
+		<input type="button" value="변경된파일" class="btn btn-outline-primary" id="btn-download-changed">
 		<input type="button" value="내변경파일" class="btn btn-outline-primary" onclick="alert('현재 버전에서는 지원하지 않습니다');">
 	</div>
 </div>
 
 <div id="bf-content-area">
 	<div class="row header-row">
-		<div class="col col-sm-4">
+		
+		<!-- 1) 미배포 변경사항 -->
+		<div class="col col-sm-3" style="padding-left: 30px;">
 	      <div class="row">
       		<div class="col col-sm-12">
 		      <h5>미배포 변경사항</h5>
@@ -42,53 +44,80 @@ input[type="button"] + input[type="button"] { margin-right: 0; }
 	      </div>
 	      <div class="row">
       		<div class="col col-sm-12">
-      			<table>
+      			<table class="list-table">
+      				<colgroup>
+     					<col width="20%" />
+     					<col width="40%" />
+     					<col width="40%" />
+      				</colgroup>
       				<thead>
-	      				<tr>
-	      					<col width="33%" />
-	      					<col width="33%" />
-	      					<col width="33%" />
-	      				</tr>
-      				</thead>
-      				<tbody>
 	    				<tr>
-	    					<td>파일명</td>
-	    					<td>최근변경자</td>
-	    					<td>최근변경일시</td>
+	    					<th>작업</th>
+	    					<th>파일명</th>
+	    					<th>마지막변경일시</th>
 	    				</tr>
-    				</tbody>
+    				</thead>
+    				<tbody>
+    				{{#clist}}
+					<tr>
+						<td class="text-center"><span class="material-icons">{{status}}</span></td>
+						<td>{{#filePath}}{{filePath}}{{/filePath}}</td>
+						<td class="text-center">{{updDtStr}}</td>
+					</tr>
+					{{/clist}}
+					</tbody>
       			</table>
 	        </div>
 	      </div>
 		</div>
-		<div class="col col-sm-4">
+		
+		<!-- 2) 변경이력 -->
+		<div class="col col-sm-6">
 	      <div class="row">
       		<div class="col col-sm-12">
 		      <h5>변경이력</h5>
 	        </div>
 	      </div>
 	      <div class="row">
-      		<div class="col col-sm-12">
-      			<table>
+      		<div class="col col-sm-12" style="padding-right: 1px;">
+      			<table class="list-table">
+      				<colgroup>
+	  					<col width="8%"/>
+	  					<col width="18%"/>
+	  					<col width="25%"/>
+	  					<col width="15%"/>
+	  					<col width="14%"/>
+	  					<col width="20%"/>
+      				</colgroup>
       				<thead>
-      					<col width="35%"/>
-      					<col width="30%"/>
-      					<col width="15%"/>
-      					<col width="20%"/>
-      				</thead>
-      				<tbody>
     				<tr>
-    					<td>구분</td>
-    					<td>파일명</td>
-    					<td>변경자</td>
-    					<td>변경일시</td>
+    					<th>작업</th>
+    					<th>구분</th>
+    					<th>이름</th>
+    					<th>파일명</th>
+    					<th>변경자</th>
+    					<th>변경일시</th>
     				</tr>
-    				</tbody>
+    				</thead>
+    				<tbody>
+    				{{#hlist}}
+					<tr>
+						<td class="text-center"><span class="material-icons">{{status}}</span></td>
+						<td class="text-center">{{type}}</td>
+						<td>{{#title}}{{title}}{{/title}}</td>
+						<td>{{#filePath}}{{filePath}}{{/filePath}}</td>
+						<td class="text-center">{{#userid}}{{userid}}{{/userid}}</td>
+						<td class="text-center">{{updDtStr}}</td>
+					</tr>
+					{{/hlist}}
+					</tbody>
       			</table>
 	        </div>
 		  </div>
 		</div>
-		<div class="col col-sm-4">
+		
+		<!-- 3) 배포이력 -->
+		<div class="col col-sm-3" style="padding-right: 0px;">
 	      <div class="row">
       		<div class="col col-sm-12">
 		      <h5>배포이력</h5>
@@ -96,67 +125,37 @@ input[type="button"] + input[type="button"] { margin-right: 0; }
 	      </div>
 	      <div class="row">
       		<div class="col col-sm-12">
-      			<table>
+      			<table class="list-table">
+      				<colgroup>
+     					<col width="33%" />
+     					<col width="33%" />
+     					<col width="33%" />
+      				</colgroup>
+      				<thead>
     				<tr>
     					<td>배포구분</td>
     					<td>배포자</td>
     					<td>다운로드일시</td>
     				</tr>
+    				</thead>
+    				<tbody>
+					{{#rlist}}
+					<tr>
+						<td>
+					  		<a href="javascript:downloadFromHistory({{id}})"><span><i class="far fa-file-code"></i>&nbsp;{{typeKr}}</span></a>
+				  		</td>
+				  		<td>{{userid}}</td>
+				  		<td>{{updDtStr}}</td>
+					  </a>
+					</re>
+					{{/rlist}}
+					</tbody>
       			</table>
 	        </div>
 	      </div>     	   
 		</div>
 	</div>
 	
-	<div class="row list-row">
-		<!-- 1) 변경된 파일 목록 -->
-		<div class="col col-sm-4">
-			<ul class="list-wrapper">
-				{{#hlist}}
-				<li>
-				  <span><i class="far fa-file-code"></i>&nbsp;{{status}} {{#filePath}}{{filePath}}{{/filePath}}</span><span style="float: right;">{{updDtStr}}</span>
-				 </li>
-				{{/hlist}}
-			</ul>
-		</div>
-		
-		<!-- 2) 변경된 이력 -->
-		<div class="col col-sm-4">
-			<table width="100%" class="list-table">
-  				<thead>
-  					<col width="35%"/>
-  					<col width="30%"/>
-  					<col width="15%"/>
-  					<col width="20%"/>
-  				</thead>
-  				<tbody>			
-				{{#hlist}}
-				<tr>
-					<td><span class="material-icons">{{status}}</span><div>{{#title}}{{title}}{{/title}}</div></td>
-					<td>{{#filePath}}{{filePath}}{{/filePath}}</td>
-					<td class="text-center">{{#userid}}{{userid}}{{/userid}}</td>
-					<td class="text-center">{{updDtStr}}</td>
-				</tr>
-				{{/hlist}}
-				</tbody>
-			</table>
-		</div>
-
-		<!-- 3) 배포 이력 -->
-		<div class="col col-sm-4">
-		  <ul class="list-wrapper release-wrapper"> 
-			{{#rlist}}
-			<li>
-			  <a href="javascript:downloadFromHistory({{id}})">
-			  <span><i class="far fa-file-code"></i>&nbsp;{{typeKr}}</span><span style="float: right;">{{updDtStr}}</span>
-			  </a>
-			</li>
-			{{/rlist}}
-		  </ul>
-		</div>
-
-	</div>
-
 </div>
 
 <iframe id="ifrm" style="display: none;"></iframe>
